the Creature disapear at the end of the animation

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ html {
 
 .playField {
     margin: 50px;
-    width: 90%;
+    width: 900px;
     height : 600px;
     background-color: white;
 }
